fix left panel overlap

--- a/client/src/style/sass/common/_app-vars.scss
+++ b/client/src/style/sass/common/_app-vars.scss
@@ -65,7 +65,7 @@ $intro-overlay-bg:         #187D8D;
 // LAYOUTS
 $side-menu-width:          192px;
 $side-menu-compressed:     72px;
-$right-panel-width:        340px;
+$right-panel-width:        360px;
 
 $main-content-left:        512px;
 $main-content-left-opened: 512px;
